TestRaftLogTruncate